--- a/9-forkify/package.json
+++ b/9-forkify/package.json
@@ -4,12 +4,14 @@
   "description": "forkify project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Danilo Petrovic",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.2",
-    "webpack": "^5.72.1"
+    "live-server": "^1.1.0",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
