error error error with babel

--- a/9-forkify/package.json
+++ b/9-forkify/package.json
@@ -11,10 +11,16 @@
   "author": "Danilo Petrovic",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.5",
+    "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "live-server": "^1.1.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.1"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
